--- a/package.json
+++ b/package.json
@@ -10,30 +10,33 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@octokit/rest": "^22.0.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.4",
     "date-fns": "^4.1.0",
+    "next": "14.2.33",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
+    "react": "^18",
+    "react-dom": "^18",
     "recharts": "^3.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@next/swc-win32-x64-msvc": "^14.2.33",
     "@types/node": "^20",
+    "@types/pusher-js": "^4.2.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/pusher-js": "^4.2.2",
-    "typescript": "^5",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.33",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
